# runompt

./: README.md  pyproject.toml
runompt/: __init__.py  constructs.py  executor.py  parser.py  types_.py
tests/: basic.ro  test_executor.py  test_parser.py
